# esp_idf_GP1287AI

./: .gitignore  CMakeLists.txt  idf_component.yml
components/gp1287/include/: esp_lcd_panel_gp1287.h
components/gp1287/src/: esp_lcd_panel_gp1287.c
include/: esp_lcd_panel_gp1287.h
priv_include/: gp1287_commands.h
src/: esp_lcd_panel_gp1287.c
